# propbot

./: .ci-ping.md  .dockerignore  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG_v6.3.2_FINAL.md  CODEOWNERS  CODEX_TASK_TEST_BOT_MVP.md  CODEX_TOR_propbot_v6.3.2_ARBITRAGE_FUTURES_ADDENDUM.md  CODEX_TOR_propbot_v6.3.2_FULL_PLUS.md  CODEX_TOR_propbot_v6.3.2_LIVE_ADDENDUM.md  Dockerfile  HANDOFF_STEPS.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  RESUME_STATE.json  Report.md  alembic.ini  api_cli.py  bootstrap.sh  docker-compose.prod.yml  docker-compose.yml  feature_request.yml  gitignore  mypy.ini  pnl_history_store.py  positions_store.py  prop_bot_super_spec_v6.3.2.md  prop_bot_super_spec_v6.3.2_FINAL.md  pyproject.toml  pytest.ini  release.sh  requirements.txt  rollback.sh
.github/: pull_request_template.md
alembic/: env.py
app/: __init__.py  audit_log.py  auto_hedge_daemon.py  capital_manager.py  cli_golden.py  dashboard_helpers.py  exchange_watchdog.py  main.py  orchestrator.py  pnl_report.py  profile_config.py  rbac.py  risk_governor.py  risk_snapshot.py  runtime_state_store.py  secrets_store.py  security.py  server_ws.py  startup_resume.py  startup_validation.py  strategy_budget.py  strategy_orchestrator.py  strategy_pnl.py  strategy_risk.py  universe_manager.py  version.py
artifacts/: TESTNET_E2E.md  last_plan.json
cli/: propbotctl.py
configs/: config.live.yaml  config.paper.yaml  config.testnet.binance.yaml  config.testnet.bybit.yaml  config.testnet.okx.yaml  config.testnet.yaml  fault_profiles.yaml  profile.live.yaml  profile.paper.yaml  profile.testnet.yaml  status_thresholds.yaml
data/: reconciliation_alerts.json  symbol_specs.json
deploy/: crypto-bot.service  crypto-bot@.service  docker-compose.prod.yml  env.example.prod  release.sh  rollback.sh
docs/: 05_ALERTS_AND_SLO.md  ALERTS_AND_SLO.md  ALERTS_RULES.md  ARBITRAGE_README.md  ARCHITECTURE.md  BRANCH_PROTECTION.md  CI_GUARDRAILS.md  CONTRIBUTING.md  DERIV_SETUP_GUIDE.md  ENV.md  GAP_REPORT.md  GO_LIVE_CHECKLIST.md  OPENAPI.md  OPERATOR_RUNBOOK.md  OPS-RUNBOOK.md  OPS_ORDER_LIFECYCLE.md  OPS_RUNBOOK.md  PROP_FINAL_TZ_v4_MAX_PROP_DESK_DELTA.md  QA_REPORT_v0.1.2.md  README_ru.md  RISK_AND_GUARDS.md  RISK_POLICY.md  RUNBOOK_ru.md  SECURITY.md  SLO_and_Monitoring.md  TESTNET_QUICKSTART.md  TESTNET_QUICKSTART_RU.md  TESTPLAN.md  VPS_HANDBOOK_ru.md  ops_overview.md  pnl_exposure_overview.md  spec_archive  strategies_overview.md
exchanges/: __init__.py  base.py  binance_futures.py  okx_futures.py
opsbot/: __init__.py  notify.py  telegram_bot.py
positions/: __init__.py
scripts/: ci_secret_scan.py  run_profile.py  smoke.sh  testnet_smoke.py
services/: __init__.py  adaptive_risk_advisor.py  audit_snapshot.py  balances_monitor.py  cross_exchange_arb.py  daily_reporter.py  edge_guard.py  execution_router.py  execution_stats_store.py  opportunity_scanner.py  reconciler.py  risk_manager.py  snapshotter.py
tests/: conftest.py  test_account_health_collect.py  test_account_health_core.py  test_adaptive_risk_advisor.py  test_alerts_pnl_integration.py  test_alerts_risk_integration.py  test_alerts_routing.py  test_alerts_wire_telegram.py  test_api_flow.py  test_arbitrage_guards.py  test_arbitrage_plan.py  test_arbitrage_preview.py  test_audit_counters.py  test_audit_export.py  test_audit_log_endpoint.py  test_audit_snapshot_endpoint.py  test_auditor_role.py  test_auth_guard.py  test_auto_hedge_daemon.py  test_autopilot_guard_daily_loss.py  test_autopilot_guard_idempotent.py  test_autopilot_guard_watchdog.py  test_autopilot_mode.py  test_balances_monitor.py  test_binance_broker.py  test_broker_interface.py  test_budget_reset_endpoint.py  test_capital_manager.py  test_chaos.py  test_chaos_injector.py  test_cli_artifact.py  test_cli_exports.py  test_cli_help.py  test_cli_loop.py  test_code_hygiene.py  test_config_api.py  test_config_profiles_testnet.py  test_config_schema.py  test_control_patch.py  test_cost_model.py  (+163 more)
(+405 files in other folders)
