[build-system]
requires = ["setuptools>=63", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "W",  # pycodestyle warnings (runtime issues like bare except)
    "B",  # flake8-bugbear
    "I",  # isort import ordering
    "S",  # security rules
    "ARG",  # unused function arguments (often real bugs)
    "PLE",  # pylint errors surfaced by ruff
    "PLC",  # pylint conventions that catch correctness problems
]
ignore = [
    "E501",  # legacy files exceed 100 chars; formatter enforces wrapping elsewhere
    "E402",  # modules intentionally import runtime dependencies after logger setup
    "W293",  # trailing whitespace on blank lines in legacy modules
    "I001",  # import sorting differs intentionally in historical files
    "UP006",  # optional "list"/"dict" hints (legacy typing style)
    "UP007",  # legacy Optional[...] usage
    "UP035",  # importlib.resources shim for 3.11 compatibility
    "ARG001",  # interfaces often include pytest fixtures / context for compatibility
    "ARG002",  # interfaces often accept unused kwargs to match production signatures
    "F401",  # legacy modules rely on side-effect imports
    "F811",  # tests purposely shadow fixtures when parametrising legacy flows
    "F841",  # retained locals used for debugging in regression harnesses
    "F842",  # intentional type annotations kept for documentation
    "B007",  # loop control vars kept for logging hooks in legacy sweeps
    "B008",  # default factories call helpers intentionally
    "B009",  # getattr with constant strings is by design for runtime wiring
    "B010",  # setattr used with constant attributes for dependency injection
    "B023",  # context managers reuse loop vars for compatibility
    "B904",  # HTTPException reraises intentionally without context chaining
    "B905",  # legacy zip usages rely on short sequences
    "S101",  # assertions guard type-narrowing paths; non-production critical
    "S105",  # tests and fixtures rely on dummy secrets
    "S106",  # same as above for function arguments
    "S110",  # defensive try/except blocks intentionally swallow errors after logging
    "S112",  # continue on defensive guard rails is intentional
    "S311",  # pseudo-random usage only for chaos/testing flows
    "S324",  # md5 digests used for ETag generation with usedforsecurity flag
    "S608",  # tests exercise SQL query strings with fixed expressions
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",  # pytest asserts are expected in test suites
    "ARG001",  # pytest fixtures often appear unused in signatures
    "ARG005",  # pytest parametrization can leave lambda arguments unused
    "I001",  # legacy import layout kept for readability in regression suites
    "ARG002",  # pytest doubles often accept unused arguments for interface parity
    "S106",  # test configs intentionally use dummy secrets
    "S108",  # integration tests use sandbox file paths under /tmp
    "S603",  # subprocess calls target trusted CLI entrypoints under test
    "S607",  # partial executable paths accepted for test harness portability
]
"scripts/ci_secret_scan.py" = [
    "S603",  # git invocations use fixed command arguments
    "S607",  # partial path acceptable for built-in git CLI
]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
strict = true

